[project]
name = "simple-tornado"
version = "0.0.0"
description = ""
authors = [
    {name = "Ujjwal Tak", email = "ujjwal.tak@gmail.com"},
]
dependencies = [
    "tornado~=6.1",
]
dev-dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
